--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,12 +1,9 @@
 name: CD Workflow
 
 on:
-  workflow_dispatch:
-    inputs:
-      docker_image:
-        description: 'Docker image to deploy'
-        required: true
-        default: 'your_docker_image_name:latest'
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -34,7 +31,7 @@ jobs:
 
       - name: Update ArgoCD Application
         env:
-          DOCKER_IMAGE: ${{ github.event.inputs.docker_image }}
+          DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE }}
           ARGOCD_APP_NAME: ${{ secrets.ARGOCD_APP_NAME }}
         run: |
           argocd app set $ARGOCD_APP_NAME \
