--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,6 @@ on:
       - develop
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
 
@@ -78,19 +77,11 @@ jobs:
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           docker push your_docker_image_name
 
-  functional-tests:
-    runs-on: ubuntu-latest
-
-
-    steps:
-      - name: Checkout code using actions/checkout
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Trigger CD Workflow
+        uses: peter-evans/workflow-dispatch@v1
         with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Run Functional Tests
-        run: mvn verify -Pfunctional-tests
+          workflow: cd.yml
+          inputs:
+            docker_image: your_docker_image_name:latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
